# wearable-analytics

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: case_study.md  cli.md  eda.md  overview.md  pipeline.md  precommit_hook.md  privacy.md  public_demo.md  sql_layer.md  stage0.md  stage1.md  stage2.md  stage3.md
examples/postgres_showcase/: README.md  docker-compose.yml  load.sql  queries.sql  schema.sql  views.sql
examples/public_demo/: README.md  daily_sanitized_sample.csv
notebooks/: 01_eda_prepare.ipynb  02_eda_timeseries.ipynb  03_eda_distributions.ipynb  05_modeling_recovery.ipynb  06_statistical_validation.ipynb
reports/: data_dictionary.csv  data_dictionary.md  data_dictionary_summary.md  pipeline_sanity.md  quality_summary.md  suspicious_days.csv  suspicious_days_artifacts.csv
scripts/: README.md  export_postgres_showcase_csv.py  inspect_uds_schema.py  make_sleep_previews.py  make_uds_previews.py  run_duckdb_portfolio_queries.py  setup_public_demo.py
sql/duckdb/: 01_quality_mix.sql  02_weekday_profiles.sql  03_top_awake_stress_days.sql  04_stress_quartile_vs_next_recovery.sql  05_next_recovery_rolling.sql  README.md  (+5 more)
tests/: test_cli_smoke.py  test_cli_sql.py  test_data_dictionary.py  test_eda_prepare.py  test_ingest_fixtures.py  test_modeling_prepare.py  test_modeling_recovery.py  test_public_demo.py  test_quality.py  test_sanitize.py  test_sql_mart.py  test_stage0_build_daily.py  test_stats_inference.py  test_stats_prepare.py
(+26 files in other folders)
